添加Redis作为mybatis的缓存

--- a/src/main/resources/properties/config.properties
+++ b/src/main/resources/properties/config.properties
@@ -1,4 +1,9 @@
+redis.host=127.0.0.1
+redis.port=7777
+redis.password=eoooxy
+
+
 driver=com.mysql.jdbc.Driver
 url=jdbc:mysql://localhost:3306/anhoo
 username=root
-password=kiwi
+password=root
