--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,13 @@
             <version>${mybatis_version}</version>
         </dependency>
 
+        <!--mybaitis 缓存-->
+        <dependency>
+            <groupId>org.mybatis.caches</groupId>
+            <artifactId>mybatis-redis</artifactId>
+            <version>1.0.0-beta2</version>
+        </dependency>
+
         <!-- mybatis-spring包 -->
         <dependency>
             <groupId>org.mybatis</groupId>
@@ -203,6 +210,12 @@
             <groupId>redis.clients</groupId>
             <artifactId>jedis</artifactId>
             <version>2.9.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-pool2</artifactId>
+            <version>2.4.2</version>
         </dependency>
 
         <dependency>
