--- a/pom.xml
+++ b/pom.xml
@@ -212,11 +212,11 @@
             <version>2.9.0</version>
         </dependency>
 
-        <dependency>
+        <!--<dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-pool2</artifactId>
             <version>2.4.2</version>
-        </dependency>
+        </dependency>-->
 
         <dependency>
             <groupId>org.redisson</groupId>
