--- a/src/main/resources/properties/config.properties
+++ b/src/main/resources/properties/config.properties
@@ -1,9 +1,9 @@
-redis.host=127.0.0.1
-redis.port=7777
-redis.password=eoooxy
+redis.host=${redis_host}
+redis.port=${redis_port}
+redis.password=${redis_password}
 
 
-driver=com.mysql.jdbc.Driver
-url=jdbc:mysql://localhost:3306/anhoo
-username=root
-password=root
+db.driver=${db_driver}
+db.url=${db_url}
+db.username=${db_username}
+db.password=${db_password}
