--- a/src/main/resources/properties/config.properties
+++ b/src/main/resources/properties/config.properties
@@ -3,6 +3,12 @@ redis.port=${redis_port}
 redis.password=${redis_password}
 
 
+redis.host.slave=${redis_host_slave}
+slave.port=${slave_port}
+redis.host.master=${redis_host_master}
+master.port=${slave_master}
+
+
 db.driver=${db_driver}
 db.url=${db_url}
 db.username=${db_username}
