Redis主从模式 ，sentinel设置

--- a/src/main/resources/properties/config.properties
+++ b/src/main/resources/properties/config.properties
@@ -3,10 +3,9 @@ redis.port=${redis_port}
 redis.password=${redis_password}
 
 
-redis.host.slave=${redis_host_slave}
-slave.port=${slave_port}
-redis.host.master=${redis_host_master}
-master.port=${slave_master}
+redis.host.sentinel1=${redis_host_sentinel1}
+redis.host.sentinel2=${redis_host_sentinel2}
+sentinel.port=${sentinel_port}
 
 
 db.driver=${db_driver}
