--- a/src/main/resources/properties/env/dev.properties
+++ b/src/main/resources/properties/env/dev.properties
@@ -1,6 +1,13 @@
-redis_host=172.21.129.201
-redis_port=7777
+#redis_host=172.21.129.201
+#redis_host=192.168.56.102
+#redis_port=7777
+redis_host=192.168.56.101
+redis_port=8887
 redis_password=eoooxy
+
+redis_host_sentinel1=192.168.56.101
+redis_host_sentinel2=192.168.56.102
+sentinel_port=9999
 
 
 db_driver=com.mysql.jdbc.Driver
